feat: Update Google Sheet URL and Vite server config
Updates the default Google Apps Script URL to a new deployment and configures Vite to listen on all network interfaces for improved accessibility in local development and preview modes. The App Script code also includes minor robustness improvements for JSON parsing and a version bump.

--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "dev": "vite",
-    "start": "vite preview",
+    "dev": "vite --host",
+    "start": "vite preview --host",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview --host"
   },
   "dependencies": {
     "jsqr": "^1.4.0",
