refactor: Update application name and add fonts
Updates the application name in metadata and HTML title from "UTS QR Attendance" to "Smart QR Attendance".

Adds Google Fonts (Inter and JetBrains Mono) to the project for improved typography and includes necessary link tags in the index.html file.

Removes unused MapPinIcon import from StudentView.

Introduces ScanHistory interface and HistoryIcon component to StudentView for potential future use.

Updates error handling in App.tsx to use generic error catching, removing specific error logging for better code cleanliness.

Adjusts useEffect hooks in App.tsx for day checking and Firebase polling to use setTimeout with a delay of 0 for more consistent execution order.

Removes unused `scriptUrl` and `onScriptUrlChange` props from TeacherView.

Adds `onUpdateKnownStudents` prop to TeacherView for managing known student data.

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "UTS QR Attendance",
-  "short_name": "UTS Attend",
+  "name": "Smart QR Attendance",
+  "short_name": "Smart Attend",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#f3f4f6",
