--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uts-qr-attendance",
+  "name": "smart-qr-attendance",
   "private": true,
   "version": "0.0.2",
   "type": "module",
@@ -20,12 +20,18 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
     "@types/node": "^20.11.24",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "eslint": "^10.0.2",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.5.2",
+    "globals": "^15.15.0",
     "typescript": "^5.5.3",
+    "typescript-eslint": "^8.56.1",
     "vite": "^5.4.1"
   }
 }
